feat(tooling): dep and builder improvements
feat(tooling): add `includeRuntime` / `noStdlib` support for kotlin
feat(tooling): add `reflection` control for kotlin
feat(tooling): add initial `automodules` and jpms support infra
feat(tooling): add `devPackages` support to `maven`
feat(tooling): add `modules` support to `maven`
feat(tooling): add `compileOnly` support to `maven`
feat(tooling): add `runtimeOnly` support to `maven`
feat(tooling): add support for global `exclusions` in maven block
feat(tooling): add initial native image support for `exclusions`
feat(tooling): add native image `defs` block
feat(tooling): add native image support for `ldflags` and `cflags` blocks
feat(tooling): add initial support for dynamic build state in `elide.pkl`
fix(builder): exclude graalvm jars from native-image classpath
fix(builder): don't include optimization settings when pgo is active
fix(builder): runtime-native exports for graal reporter module
fix(builder): relock experimental native image hosted options
fix(builder): mounted codegen and main inputs for kotlinc and javac
fix(builder): wrong count of java/kotlin sources in build messages
fix(builder): kotlinc isn't receiving `-jvm-target` flag
fix(cli): ship svm macros with final dist
fix(cli): missing native image reflective types for kotlinc
fix: incorrect snakeyaml dependency

Fixes: elide-dev/elide#1692
Fixes: elide-dev/elide#1691
Fixes: elide-dev/elide#1688

Signed-off-by: Sam Gammon <sam@elide.dev>